// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`State set & get 1`] = `
GlobalState {
  "nextNotifierId": null,
  "state": Object {
    "key": "value",
  },
  "watchers": Array [],
}
`;

exports[`State set & get 2`] = `
GlobalState {
  "nextNotifierId": 1,
  "state": Object {
    "": "value2",
    "key": "value",
  },
  "watchers": Array [],
}
`;

exports[`State set & get 3`] = `
GlobalState {
  "nextNotifierId": null,
  "state": Object {
    "": "value2",
    "key": "value",
  },
  "watchers": Array [],
}
`;

exports[`State set & get 4`] = `
GlobalState {
  "nextNotifierId": null,
  "state": "value3",
  "watchers": Array [],
}
`;

exports[`State set & get 5`] = `
GlobalState {
  "nextNotifierId": null,
  "state": "value4",
  "watchers": Array [],
}
`;

exports[`State set & get 6`] = `
GlobalState {
  "nextNotifierId": null,
  "state": Object {
    "": "value5",
  },
  "watchers": Array [],
}
`;

exports[`State set & get 7`] = `
Array [
  Array [
    "New ReactGlobalState created",
  ],
  Array [
    "Initial state:",
    Object {
      "key": "value",
    },
  ],
  Array [
    "ReactGlobalState update. Path: \\"\\"",
  ],
  Array [
    "New value:",
    "value2",
  ],
  Array [
    "New state:",
    Object {
      "": "value2",
      "key": "value",
    },
  ],
  Array [
    "ReactGlobalState update. Path: \\"\\"",
  ],
  Array [
    "New value:",
    "value3",
  ],
  Array [
    "New state:",
    "value3",
  ],
  Array [
    "ReactGlobalState update. Path: \\"\\"",
  ],
  Array [
    "New value:",
    "value4",
  ],
  Array [
    "New state:",
    "value4",
  ],
  Array [
    "ReactGlobalState update. Path: \\"\\"",
  ],
  Array [
    "New value:",
    "value5",
  ],
  Array [
    "New state:",
    Object {
      "": "value5",
    },
  ],
]
`;

exports[`Watch & unWatch logic 1`] = `
Array [
  Array [
    "New ReactGlobalState created",
  ],
  Array [
    "Initial state:",
    undefined,
  ],
]
`;
